Doc/0.1/01-grid/03_flexbox_ru.md
![RimUI Framework](../../../About/Preview.png)

**RimUI Framework** — ядро `0.7.1` · мод `0.1.0` · RimWorld `1.6`

---

[Оглавление](../index_ru.md) - Сетка | Пред.: [GridCell](02_gridcell_ru.md) | След.: [Style — модель стиля](../02-styles/01_style_ru.md) | [English](03_flexbox_en.md)

---

# FlexBox

Flex-контейнер: раскладывает детей вдоль одной оси (ряд или колонка) с растяжением, выравниванием
и распределением по краям — семантика заимствована из CSS flexbox. Используется как содержимое
ячейки `GridCell` или как самостоятельный контейнер. Умеет быть зоной drag&drop-«списка».

`RimUI.Layout.FlexBox : UiElement`

## Пример

```csharp
var row = new FlexBox(Axis.Row) { Style = { Gap = 8f, JustifyContent = JustifyContent.SpaceBetween } };
row.Add(new Text("Слева"));
row.Add(Button.Make("Справа"), grow: 0f);

// drag&drop: список, дроп вставляется по позиции курсора
var list = new FlexBox(Axis.Column) { DragGroup = "queue" };
list.Add(itemA);
list.Add(itemB);
```

## Параметры

| Параметр | Тип | По умолчанию | Описание |
|---|---|---|---|
| `Axis` | `Axis` (`Row`\|`Column`) | `Column` | Главная ось раскладки. Для `Row` дети по умолчанию центрируются по вертикали (`Style.AlignItems = Center`), для `Column` — растягиваются (`Stretch`); явный `Style.AlignItems` перекрывает дефолт. |
| `Grow` | `List<float>` | пусто | Коэффициенты растяжения детей по индексу (аналог `flex-grow`); 0 = не растягивать. |
| `DragGroup` | `string` | `null` | Идентификатор группы drag&drop; `null` = выключено. |
| `DragOut` | `bool` | `true` | Можно ли утащить детей ИЗ этой зоны. |
| `DropIn` | `bool` | `true` | Принимает ли зона дроп (вставка по позиции курсора). |
| `DragCopy` | `bool` | `false` | Источник отдаёт КОПИЮ вместо переноса (нужна `CopyOf`). |
| `CopyOf` | `Func<UiElement, UiElement>` | `null` | Фабрика клона для `DragCopy`. |

## Точное распределение свободного пространства (Grow)

Формула для положительного остатка — ровно как CSS `flex-grow`: `mainSize[i] += leftover ×
(Grow[i] / sumGrow)`, где `leftover` — свободное место после раскладки всех детей по их желаемым
размерам. **Важно**: если задан хоть один `Grow > 0`, `JustifyContent` полностью ИГНОРИРУЕТСЯ,
даже при положительном остатке — растяжение и выравнивание по главной оси взаимоисключающи;
`JustifyContent` работает только тогда, когда сумма `Grow` у всех детей равна нулю.

Если детям, наоборот, не хватает места (сумма желаемых размеров больше доступного) — **все дети
ужимаются пропорционально своему собственному размеру** (не по `Grow`, отдельного «flex-shrink»
на элемент не существует): `mainSize[i] *= target/total`. То есть `Grow` управляет только
распределением ИЗБЫТКА пространства, а не поведением при нехватке.

**`AlignSelf` переопределяет `AlignItems` контейнера для конкретного ребёнка**, но читается из
СЫРОГО `Style` ребёнка (`Children[i].Style.AlignSelf`), а не из резолвленного через тему стиля —
слот темы не может задать `AlignSelf` дочернему элементу, только пользовательский код.

`Style.JustifyContent` (`Start|Center|End|SpaceBetween|SpaceAround|SpaceEvenly`) — распределение
по главной оси, действует только при отсутствии `Grow`; `Style.Gap` — зазор между детьми;
`Style.AlignItems`/`AlignSelf` — выравнивание по поперечной оси.

## Методы

| Метод | Возвращает | Описание |
|---|---|---|
| `FlexBox(Axis axis = Axis.Column)` (конструктор) | — | Создать контейнер с осью `Row` или `Column`. |
| `Add(UiElement child, float grow = 0f)` | `FlexBox` | Добавить ребёнка с коэффициентом растяжения, возвращает себя. |
| `RemoveChildAt(int i)` | `void` | Удалить ребёнка с синхронизацией списка `Grow`. |
| `InsertChild(int i, UiElement el, float grow = 0f)` | `void` | Вставить ребёнка по индексу с синхронизацией `Grow`. |

Порог начала перетаскивания (`DragGroup`) — тот же, что у `GridCell`: `dx² + dy² > 25`, то есть
ровно 5 единиц смещения мыши от точки нажатия, пока порог не пройден — обычные клики по детям
продолжают работать штатно.

## События

| Событие | Тип | Параметры | Когда вызывается |
|---|---|---|---|
| `OnDragStart` | `Action<UiElement>` | перетаскиваемый элемент | Элемент взяли из зоны (порог сдвига мыши пройден). |
| `OnDragOut` | `Action<UiElement>` | перетаскиваемый элемент | Элемент утащили ИЗ зоны (после удаления при переносе). |
| `OnDropIn` | `Action<UiElement, int>` | принятый элемент, индекс вставки | Элемент принят зоной. |

## Поддержка механик

| Механика | Поддержка | Пояснение |
|---|---|---|
| Стиль (`Style`) | Да | Фон/бордюр/паддинг/gap как у любого контейнера. |
| Спрайт-рамка | Да | Через `Style.Sprite`. |
| Анимация (`Style.Animation`) | Да | Общий механизм. |
| Disabled | Нет | Своего понятия «отключён» нет. |
| Hover-fade | Нет | Подсветка совместимой зоны при drag — мгновенная, не плавная. |
| Drag&drop | Да | Зона-**список**: дроп вставляется по позиции курсора между существующими детьми. |


---

[Оглавление](../index_ru.md) - Сетка | Пред.: [GridCell](02_gridcell_ru.md) | След.: [Style — модель стиля](../02-styles/01_style_ru.md) | [English](03_flexbox_en.md)

## Поддержать автора
Если тебе нравится RimUI Framework, можешь поддержать разработку:

[DonationAlerts](https://www.donationalerts.com/r/klimprog)
[Boosty](https://boosty.to/klimprog/donate)

**USDT (TRC20):** `TA4zq9F4TTrSQXjEESMBk8juQMGNLXX4B5`

Спасибо! ❤️
